src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_65_2.deca
// Description:
//    regle 3.65, la classe de l'expression n'est pas sous classe de la classe courante.
//
// Resultats:
//    Ligne 11: 'x' is protected.
class A {
    protected int x = 1;
}
class B extends A {
    int getX(A a) {
        return a.x;
    }
}